Add chart logic.

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,8 +47,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-8">
-        <div  id="map-id">
-          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing
+        <div  id="map-id"  style="width: 750px; height: 500px;"> 
+          <!-- <h3>Lorem ipsum dolor sit amet, consectetur adipiscing
             elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ultricies
             lacus sed turpis tincidunt id. Vulputate enim nulla aliquet porttitor lacus
             luctus accumsan tortor.luctus accumsan tortor.Lorem ipsum dolor sit amet, consectetur adipiscing
@@ -57,7 +57,7 @@
             luctus accumsan tortor.Lorem ipsum dolor sit amet, consectetur adipiscing
             elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ultricies
             lacus sed turpis tincidunt id. Vulputate enim nulla aliquet porttitor lacus
-            luctus accumsan tortor. </h3>
+            luctus accumsan tortor. </h3> -->
           </div>
         </div>
 
@@ -120,9 +120,6 @@
 </div> -->
 <!-- the part that will appear after clicking on show -->
 
-<!--  Chart with all data  : count of universities by acceptance rate with the 10 bins and bar chart + table that pops
-up when we click on bars Rupali/ Debbie / Sara -->
-
 
 <!-- Dashboard  -->
 <!-- 1st chart : demographic data : gender,Ethnicity, age ,etc  Sara -->
@@ -134,32 +131,23 @@ up when we click on bars Rupali/ Debbie / Sara -->
   </div>
 </div>
 
-  <!-- 1st chart : demographic data : gender,Ethnicity, age ,etc  Sara -->
-  <div>
-    <h3>Lorem ipsum dolor sit amet, consectetur adipiscing
-      elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ultricies
-      lacus sed turpis tincidunt id. Vulputate enim nulla aliquet porttitor lacus
-      luctus accumsan tortor. </h3>
-    </div>
+<br>
 
-    <!-- 2nd chart :Financial aid + tuition+ percentage of tuition can be in financial aid  Debbie  bar + line -->
-    <div>
-      <h3>Lorem ipsum dolor sit amet, consectetur adipiscing
-        elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ultricies
-        lacus sed turpis tincidunt id. Vulputate enim nulla aliquet porttitor lacus
-        luctus accumsan tortor. </h3>
-      </div>
+<!-- 2nd chart : Combo chart of bar and line chart comparing tuition and financial aid (grants and loans) by universities. Debbie -->   
+<div id="tuition_chart" class="row"> 
+<!-- <h3>Lorem ipsum dolor sit amet, consectetur adipiscing
+     elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ultricies
+     lacus sed turpis tincidunt id. Vulputate enim nulla aliquet porttitor lacus
+     luctus accumsan tortor. </h3> -->
+</div>
 
+<br>
 
-      <!--- 3rd :  collapsable tree  for everythin : Rupali -->
-      <div>
-        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing
-          elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ultricies
-          lacus sed turpis tincidunt id. Vulputate enim nulla aliquet porttitor lacus
-          luctus accumsan tortor. </h3>
-        </div>
+<!--- 3rd :  scatter plot of filtered data : Rupali -->
+<div id="student_faculty_chart" class="row"> 
+</div>
 
-        <script type="text/javascript" src="../static/app.js"></script>
+<script type="text/javascript" src="../static/app.js"></script>
 
 
-        <body>
+<body>
