--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,7 +34,7 @@ body {
     height: 100%;
     padding: 0;
     margin: 0;
-    
+
     /* width: 50vw;
  height: 50vh; */
   }
@@ -66,3 +66,14 @@ body {
   .legend .q4_acceptance {
     color: green;
   }
+
+
+  .affix {
+        top: 0;
+        width: 100%;
+        z-index: 9999 !important;
+    }
+
+    .affix + .container-fluid {
+        padding-top: 70px;
+    }
