--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
             <li> <a id="map" href="#map-id" target="_self"> Map </a> </li>
             <li> <a id="demo" href="#chartContainer" target="_self"> Demographic Information</a> </li>
             <li> <a id="financial" href="#tuition_chart" target="_self"> Financial Information </a> </li>
-            <li> <a id="acceptance" href="#student_faculty_chart" target="_self"> Acceptance Rate </a> </li>
+            <li> <a id="acceptance" href="#acceptance_chart" target="_self"> Acceptance Rate </a> </li>
           </ul>
         </nav>
       </div>
@@ -53,16 +53,6 @@
     <div class="row">
       <div class="col-md-8">
         <div  id="map-id"  style="width: 750px; height: 500px;">
-          <!-- <h3>Lorem ipsum dolor sit amet, consectetur adipiscing
-          elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ultricies
-          lacus sed turpis tincidunt id. Vulputate enim nulla aliquet porttitor lacus
-          luctus accumsan tortor.luctus accumsan tortor.Lorem ipsum dolor sit amet, consectetur adipiscing
-          elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ultricies
-          lacus sed turpis tincidunt id. Vulputate enim nulla aliquet porttitor lacus
-          luctus accumsan tortor.Lorem ipsum dolor sit amet, consectetur adipiscing
-          elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ultricies
-          lacus sed turpis tincidunt id. Vulputate enim nulla aliquet porttitor lacus
-          luctus accumsan tortor. </h3> -->
         </div>
       </div>
 
@@ -141,16 +131,12 @@
 
 <!-- 2nd chart : Combo chart of bar and line chart comparing tuition and financial aid (grants and loans) by universities. Debbie -->
 <div id="tuition_chart" class="row">
-  <!-- <h3>Lorem ipsum dolor sit amet, consectetur adipiscing
-  elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ultricies
-  lacus sed turpis tincidunt id. Vulputate enim nulla aliquet porttitor lacus
-  luctus accumsan tortor. </h3> -->
 </div>
 
 <br>
 
-<!--- 3rd :  scatter plot of filtered data : Rupali -->
-<div id="student_faculty_chart" class="row">
+<!--- 3rd : Histogram Acceptance Rate : Rupali -->
+<div id="acceptance_chart" class="row">
 </div>
 
 <script type="text/javascript" src="../static/app.js"></script>
