--- a/static/css/style.css
+++ b/static/css/style.css
@@ -77,3 +77,27 @@ body {
     .affix + .container-fluid {
         padding-top: 70px;
     }
+
+    .node {
+      cursor: pointer;
+  }
+  
+  .overlay{
+        background-color:#EEE;
+  }
+     
+  .node circle {
+    fill: #fff;
+    stroke: steelblue;
+    stroke-width: 2px;
+  }
+  
+  .node text {
+    font: 12px sans-serif;
+  }
+  
+  .link {
+    fill: none;
+    stroke: #ccc;
+    stroke-width: 2px;
+  }
